just a rename to folder

--- a/02 - CSS JS Clock/index.html
+++ b/02 - CSS JS Clock/index.html
@@ -1,13 +1,12 @@
 <html>
-    <header>
+    <head>
         <title>Clock!</title>
         <link rel="stylesheet" type="text/css" href="style.css" ></link>
         <script type="text/javascript" src="script.js"></script>
-    </header>
+    </head>
     <body>
         <div class="circle">
             <div class="center">
-                        
                 <div id="hand-hours" class="hand"></div>
                 <div id="hand-minutes" class="hand"></div>
                 <div id="hand-seconds" class="hand"></div>
