--- a/02-css-js-clock/index.html
+++ b/02-css-js-clock/index.html
@@ -1,16 +1,24 @@
-<html>
-    <head>
-        <title>Clock!</title>
-        <link rel="stylesheet" type="text/css" href="style.css" ></link>
-        <script type="text/javascript" src="script.js"></script>
-    </head>
-    <body>
-        <div class="circle">
-            <div class="center">
-                <div id="hand-hours" class="hand"></div>
-                <div id="hand-minutes" class="hand"></div>
-                <div id="hand-seconds" class="hand"></div>
-            </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    
+    <link rel="icon" type="image/x-icon" href="logo_dark_black_bg_16x16_icon.ico">
+    <link rel="stylesheet" type="text/css" href="style.css" ></link>
+
+    <title>CSS Clock</title>
+</head>
+<body>
+    <div class="circle">
+        <div class="center">
+            <div id="hand-hours" class="hand"></div>
+            <div id="hand-minutes" class="hand"></div>
+            <div id="hand-seconds" class="hand"></div>
         </div>
-    </body>
+    </div>
+
+    <script type="text/javascript" src="script.js"></script>
+</body>
 </html>
