divs from main section

--- a/index.html
+++ b/index.html
@@ -33,13 +33,54 @@
         <section>
             <div class="container">
                 <div class="row">
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="01-javascript-drum-kit/index.html">01 - Javascript Drums Kit</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="02-css-js-clock/index.html">02 - CSS Clock</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="#">03 - Coming soon...</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="#">04 - Coming soon...</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="#">05 - Coming soon...</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="#">06 - Coming soon...</a>
+                        </div>
+                    </div>
+
+                    <div class="col-12 col-sm-6 col-md-4 exercise">
+                        <div>
+                            <a target="__blank" href="#">07 - Coming soon...</a>
+                        </div>
+                    </div>
+
                     <div class="col-12">
                         <ul>
                             <li>
-                                <a target="__blank" href="01-javascript-drum-kit/index.html">01 - Javascript Drums Kit</a>
                             </li>
                             <li>
-                                <a target="__blank" href="02-css-js-clock/index.html">02 - CSS Clock</a>
                             </li>
                         </ul>
                     </div>
@@ -51,7 +92,7 @@
 			<div class="container">
 				<div class="row">
 
-					<div class="col-12 col-md-6">
+					<div class="col-12 col-sm-6 ">
                         <div class="font-weight-lighter">
                             <p class="d-block">
                                 You can
@@ -88,7 +129,7 @@
                         </div>
                     </div>
                     
-					<div class="col-12 col-md-6 d-flex justify-content-center">
+					<div class="col-12 col-sm-6 d-flex align-items-center justify-content-center">
                         <div class="text-center">
                             <a target="_blank" href="https://jesusrios.dev/" >
                                 <img class="d-block" src="img/full-logo-dark-transparent-bg-3000x1000_mini.png" alt="logo" height="100px" >
